--- a/template/tmpl_obj.cpp.jinja
+++ b/template/tmpl_obj.cpp.jinja
@@ -22,37 +22,36 @@ namespace loglab_{{ domain.name }}
 {
     class LogSerializer {
     public:
-        static thread_local std::stringstream ss;
-        static thread_local std::string buffer;
-        static thread_local char datetime_buffer[32];
 
-        static std::string& SerializeToBuffer(const std::string& content) {
-            ss.clear();
-            ss.str("");
-            ss << content;
-            buffer = ss.str();
-            return buffer;
-        }
-
-        static const char* FormatDateTime() {
+        static std::string FormatDateTime() {
             auto now = std::chrono::system_clock::now();
             auto in_time_t = std::chrono::system_clock::to_time_t(now);
             auto microseconds = std::chrono::duration_cast<std::chrono::microseconds>(now.time_since_epoch()) % 1000000;
 
-            std::tm* tm_utc = std::gmtime(&in_time_t);
-            int len = std::sprintf(datetime_buffer, "%04d-%02d-%02dT%02d:%02d:%02d.%06ldZ",
-                tm_utc->tm_year + 1900, tm_utc->tm_mon + 1, tm_utc->tm_mday,
-                tm_utc->tm_hour, tm_utc->tm_min, tm_utc->tm_sec,
+            char datetime_buffer[64];
+{% if utc %}
+            std::tm* tm_time = std::gmtime(&in_time_t);
+            std::sprintf(datetime_buffer, "%04d-%02d-%02dT%02d:%02d:%02d.%06ldZ",
+                tm_time->tm_year + 1900, tm_time->tm_mon + 1, tm_time->tm_mday,
+                tm_time->tm_hour, tm_time->tm_min, tm_time->tm_sec,
+                microseconds.count());
+{% else %}
+            std::tm* tm_time = std::localtime(&in_time_t);
+            int len = std::sprintf(datetime_buffer, "%04d-%02d-%02dT%02d:%02d:%02d.%06ld",
+                tm_time->tm_year + 1900, tm_time->tm_mon + 1, tm_time->tm_mday,
+                tm_time->tm_hour, tm_time->tm_min, tm_time->tm_sec,
                 microseconds.count());
 
-            return datetime_buffer;
+            // Add timezone offset for local time
+            long offset = tm_time->tm_gmtoff;
+            int hours = offset / 3600;
+            int minutes = abs(offset % 3600) / 60;
+            std::sprintf(datetime_buffer + len, "%+03d:%02d", hours, minutes);
+{% endif %}
+
+            return std::string(datetime_buffer);
         }
     };
-
-    // Thread-local static member definitions
-    thread_local std::stringstream LogSerializer::ss;
-    thread_local std::string LogSerializer::buffer;
-    thread_local char LogSerializer::datetime_buffer[32];
 
 {% for name, elst in events.items() %}
 {% set edata = elst[-1] %}
@@ -98,27 +97,26 @@ namespace loglab_{{ domain.name }}
 {% endfor %}
         }
 
-        std::string& serialize()
+        std::string serialize()
         {
-            LogSerializer::ss.clear();
-            LogSerializer::ss.str("");
-            LogSerializer::ss << "{";
+            std::stringstream ss;
+            ss << "{";
 
             // DateTime and Event
-            LogSerializer::ss << "\"DateTime\":\"" << LogSerializer::FormatDateTime() << "\",";
-            LogSerializer::ss << "\"Event\":\"" << Event << "\"";
+            ss << "\"DateTime\":\"" << LogSerializer::FormatDateTime() << "\",";
+            ss << "\"Event\":\"" << Event << "\"";
 
             // Required fields
 {% for fname, flst in (edef.fields|required).items() %}
 {% set fdef = flst[-1][1] %}
-            LogSerializer::ss << ",";
-            LogSerializer::ss << "\"{{ fname }}\":";
+            ss << ",";
+            ss << "\"{{ fname }}\":";
 {% if type(fdef) == 'std::string' %}
-            LogSerializer::ss << "\"" << {{ fname }} << "\"";
+            ss << "\"" << {{ fname }} << "\"";
 {% elif type(fdef) == 'bool' %}
-            LogSerializer::ss << ({{ fname }} ? "true" : "false");
+            ss << ({{ fname }} ? "true" : "false");
 {% else %}
-            LogSerializer::ss << {{ fname }};
+            ss << {{ fname }};
 {% endif %}
 {% endfor %}
 
@@ -127,34 +125,33 @@ namespace loglab_{{ domain.name }}
 {% set fdef = flst[-1][1] %}
             if ({{ fname }}.has_value())
             {
-                LogSerializer::ss << ",";
-                LogSerializer::ss << "\"{{ fname }}\":";
+                ss << ",";
+                ss << "\"{{ fname }}\":";
 {% if type(fdef) == 'std::string' %}
-                LogSerializer::ss << "\"" << {{ fname }}.value() << "\"";
+                ss << "\"" << {{ fname }}.value() << "\"";
 {% elif type(fdef) == 'bool' %}
-                LogSerializer::ss << ({{ fname }}.value() ? "true" : "false");
+                ss << ({{ fname }}.value() ? "true" : "false");
 {% else %}
-                LogSerializer::ss << {{ fname }}.value();
+                ss << {{ fname }}.value();
 {% endif %}
             }
 {% endfor %}
 
             // Const fields
 {% for fname, finfo in (edef.fields|const).items() %}
-            LogSerializer::ss << ",";
-            LogSerializer::ss << "\"{{ fname }}\":";
+            ss << ",";
+            ss << "\"{{ fname }}\":";
 {% set ftype = finfo[0] %}
 {% set fval = finfo[1] %}
 {% if ftype == 'string' %}
-            LogSerializer::ss << "\"" << {{ fval }} << "\"";
+            ss << "\"" << {{ fval }} << "\"";
 {% else %}
-            LogSerializer::ss << {{ fval }};
+            ss << {{ fval }};
 {% endif %}
 {% endfor %}
 
-            LogSerializer::ss << "}";
-            LogSerializer::buffer = LogSerializer::ss.str();
-            return LogSerializer::buffer;
+            ss << "}";
+            return ss.str();
         }
     };
 {% endfor %}
